Feat: Fix image captioning test cases, Minor changes in Swagger API, Added more test cases for Chat and Feedback API
