# server/routes/captionRoutes.js
@@ -1,8 +1,13 @@
 const express = require("express");
 const router = express.Router();
-const { imageCaption } = require("../controllers/imageCaptionController");
+const {
+  imageCaption,
+  captionize,
+} = require("../controllers/imageCaptionController");
+const { validateAndSanitizeBody } = require("../middlewares/commonMiddlewares");
+const { createImageCaptionSchema } = require("../schemas/yupSchemas");
 
-// Commented this out for unecessary image captioning
-// router.post("/", imageCaption);
+// Commented this out for unnecessary image captioning
+router.post("/", validateAndSanitizeBody(createImageCaptionSchema), captionize);
 
 module.exports = router;
